[gd_scene load_steps=22 format=3 uid="uid://bhnjrdgdwcht8"]

[ext_resource type="Script" uid="uid://cylxwcy180yiu" path="res://entities/planet/corrupted_planet.gd" id="1_md1qs"]
[ext_resource type="Script" uid="uid://cnqhqro3npd0c" path="res://systems/audio/configurable_audio_stream_resource.gd" id="2_vgmyl"]
[ext_resource type="Texture2D" uid="uid://cwklse3j3g0o3" path="res://assets/art/Start Game/Shine_Effect.png" id="3_4ootd"]
[ext_resource type="AudioStream" uid="uid://dclpmsxnfb2mr" path="res://assets/sound/effects/planetexplosion.mp3" id="3_axe2j"]
[ext_resource type="Texture2D" uid="uid://rq22r3fkpa20" path="res://assets/art/Objects/Black_Hole.png" id="3_wkmf5"]
[ext_resource type="Texture2D" uid="uid://bgbic7qliga1d" path="res://assets/art/Objects/Asteroid_Small.png" id="5_axe2j"]
[ext_resource type="Shader" uid="uid://oh13uo0borwt" path="res://entities/planet/corrupted_planet.gdshader" id="5_wkmf5"]
[ext_resource type="Texture2D" uid="uid://bv8jvn71dpd2n" path="res://assets/art/drag_hint/Hint_Dot.png" id="6_4ootd"]

[sub_resource type="Resource" id="Resource_vjgbf"]
script = ExtResource("2_vgmyl")
stream = ExtResource("3_axe2j")
pitch_range = Vector2(0.7, 0.9)
metadata/_custom_type_script = "uid://cnqhqro3npd0c"

[sub_resource type="CircleShape2D" id="CircleShape2D_0pdj7"]
resource_local_to_scene = true
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_itihs"]
radius = 256.0

[sub_resource type="Gradient" id="Gradient_gq23p"]
offsets = PackedFloat32Array(0, 0.2674897, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.9403004, 0.65061843, 0.5179046, 0.7325103, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1uo7p"]
gradient = SubResource("Gradient_gq23p")

[sub_resource type="Curve" id="Curve_01opl"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.30483273, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.25541788), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_344kx"]
curve = SubResource("Curve_01opl")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hxvkj"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 18.18
spread = 180.0
initial_velocity_min = 123.77
initial_velocity_max = 123.77
scale_curve = SubResource("CurveTexture_344kx")
color_ramp = SubResource("GradientTexture1D_1uo7p")

[sub_resource type="Animation" id="Animation_gq23p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShineEffect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_agge8"]
resource_name = "explode"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShineEffect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1uo7p"]
_data = {
&"RESET": SubResource("Animation_gq23p"),
&"explode": SubResource("Animation_agge8")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_agge8"]
resource_local_to_scene = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vgmyl"]
resource_local_to_scene = true
shader = ExtResource("5_wkmf5")
shader_parameter/amt = 1.0
shader_parameter/color = Color(0.77707314, 0, 0.23160964, 0.21960784)

[node name="CorruptedPlanet" type="Node2D" node_paths=PackedStringArray("_graphics_root", "collision_shape", "explosion_particles", "anim_player", "corrupted_area", "corrupted_area_shape", "corruption_sprite")]
script = ExtResource("1_md1qs")
_graphics_root = NodePath("Graphics")
collision_shape = NodePath("Area2D2/CollisionShape2D")
explosion_particles = NodePath("GPUParticles2D")
anim_player = NodePath("AnimationPlayer")
corrupted_area = NodePath("CorruptArea2D")
corrupted_area_shape = NodePath("CorruptArea2D/CollisionShape2D")
corruption_sprite = NodePath("Sprite2D")
explosion_sfx = SubResource("Resource_vjgbf")

[node name="ShineEffect" type="Sprite2D" parent="."]
texture = ExtResource("3_4ootd")

[node name="Graphics" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Graphics"]
scale = Vector2(0.093, 0.093)
texture = ExtResource("3_wkmf5")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
visible = false
shape = SubResource("CircleShape2D_0pdj7")

[node name="Area2D" type="Area2D" parent="."]
gravity_space_override = 1
gravity_point = true
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 120.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_itihs")
debug_color = Color(0.043137256, 0.62352943, 0.5294118, 0.16862746)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
texture = ExtResource("5_axe2j")
lifetime = 0.6
one_shot = true
explosiveness = 0.64
process_material = SubResource("ParticleProcessMaterial_hxvkj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1uo7p")
}

[node name="CorruptArea2D" type="Area2D" parent="."]
linear_damp_space_override = 1
linear_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CorruptArea2D"]
visible = false
shape = SubResource("CircleShape2D_agge8")
debug_color = Color(1, 0, 0.11764706, 0.23921569)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vgmyl")
texture = ExtResource("6_4ootd")

[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="CorruptArea2D" to="." method="_on_corrupt_area_2d_body_entered"]
[connection signal="body_exited" from="CorruptArea2D" to="." method="_on_corrupt_area_2d_body_exited"]
